trunk/Archive2/46/5c9205c0a8a208/output
+ clang++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:12:4: error: cannot compile this conditional operator yet
  (bLeft?aa.iLeft:aa.iRight)=5;
   ^~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
